--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,15 @@
   "description": "Backend for the application",
   "main": "index.js",
   "scripts": {
-    "test": "echo Backend Test Succeeded && exit 0"
+    "test": "echo Backend Test Succeeded && exit 0",
+    "build": "tsx build.ts"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "process": "^0.11.10"
+  },
+  "devDependencies": {
+    "@types/node": "^24.8.1"
+  }
 }
