Yoni - made the eslint config working and started configing the eslint

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo Backend Test Succeeded && exit 0",
-    "build": "tsx build.ts"
+    "build": "tsx build.ts",
+    "start": "node dist/bundle.js",
+    "deploy": "npm run build && npm run start"
   },
   "author": "",
   "license": "ISC",
