--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "full-stack-template",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "test": "echo Test Succeeded && exit 0"
   },
@@ -14,7 +13,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "esbuild": "0.25.11"
+    "@eslint/js": "^9.38.0",
+    "esbuild": "0.25.11",
+    "eslint": "^9.38.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
   },
   "dependencies": {
     "tsx": "^4.20.6"
