--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^2.3.1",
     "@eslint/js": "^9.38.0",
+    "@types/react": "^19.2.2",
     "esbuild": "0.25.11",
     "eslint": "^9.38.0",
     "eslint-plugin-react": "^7.37.5",
@@ -24,6 +26,7 @@
   },
   "dependencies": {
     "eslint-plugin-bsd": "^1.0.0",
+    "react": "^19.2.0",
     "tsx": "^4.20.6"
   }
 }
