--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "echo Backend Test Succeeded && exit 0",
     "build": "tsx build.ts",
     "start": "node dist/bundle.js",
+    "dev": "set DEV=TRUE && tsx build.ts",
     "deploy": "npm run build && npm run start"
   },
   "author": "",
