--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
