--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -37,9 +37,8 @@ jobs:
       - name: Run ESLint
         env:
           SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
-        run: npx eslint .
-          --config .eslintrc.js
-          --ext .js,.jsx,.ts,.tsx
+        run: npx eslint . 
+          --config eslint.config.mts
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
