--- a/package.json
+++ b/package.json
@@ -1,45 +1,38 @@
 {
   "name": "full-stack-template",
-  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo Test Succeeded && exit 0",
-    "backend:dev": "npm run --workspace=backend dev",
-    "frontend:dev": "npm run --workspace=frontend dev",
-    "dev": "concurrently \"npm run backend:dev\" \"npm run frontend:dev\"",
-    "build": "npm run --workspace=backend build && npm run --workspace=frontend build",
-    "start": "npm run --workspace=backend start && npm run --workspace=frontend start",
-    "deploy": "npm run build && npm run start"
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "serve": "turbo run serve",
+    "deploy": "turbo run deploy",
+    "check-types": "turbo run check-types",
+    "generate": "tsx scripts/generateProject.ts"
   },
-  "workspaces": [
-    "frontend",
-    "backend",
-    "common"
-  ],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^2.3.1",
-    "@eslint/js": "^9.38.0",
+    "@eslint-react/eslint-plugin": "^2.3.5",
     "@types/express": "^5.0.5",
-    "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "concurrently": "^9.2.1",
-    "esbuild": "0.25.11",
-    "eslint": "^9.38.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.4.0",
-    "jiti": "^2.6.1",
-    "ts-node": "^10.9.2",
+    "@types/node": "^24.10.1",
+    "prettier": "^3.6.2",
+    "turbo": "^2.6.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2"
+    "typescript-eslint": "^8.47.0"
   },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "npm@10.9.2",
+  "workspaces": [
+    "apps/*/backend",
+    "apps/*/frontend",
+    "packages/*"
+  ],
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.16",
     "eslint-plugin-bsd": "^1.0.0",
+    "eslint-plugin-react": "^7.37.5",
     "express": "^5.1.0",
-    "react": "^19.2.0",
-    "tailwindcss": "^4.1.16",
     "tsx": "^4.20.6"
   }
 }
