--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "serve": "turbo run serve",
-    "deploy": "turbo run deploy",
+    "deploy": "npm run build && npm run serve",
     "check-types": "turbo run check-types",
     "generate": "tsx scripts/generateProject.ts"
   },
@@ -15,6 +15,8 @@
     "@eslint-react/eslint-plugin": "^2.3.5",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
+    "cross-env": "^10.1.0",
+    "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
     "turbo": "^2.6.1",
     "typescript": "^5.9.3",
@@ -30,6 +32,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "dotenv": "^17.2.3",
     "eslint-plugin-bsd": "^1.0.0",
     "eslint-plugin-react": "^7.37.5",
     "express": "^5.1.0",
