--- a/apps/template/backend/package.json
+++ b/apps/template/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo Backend Test Succeeded && exit 0",
     "build": "tsx build.ts",
     "serve": "node dist/bundle.js",
-    "dev": "cross-env DEV=TRUE tsx build.ts"
+    "dev": "tsx build.ts"
   },
   "author": "",
   "license": "ISC",
