--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2022" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
     "module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     // "lib": ["es2015"],        /* Specify library files to be included in the compilation. */
+    "moduleResolution": "node",
     "allowJs": true /* Allow javascript files to be compiled. */,
     "checkJs": true /* Report errors in .js files. */,
     "noEmit": true /* Do not emit outputs. */,
@@ -19,7 +20,7 @@
     "alwaysStrict": false /* Parse in strict mode and emit "use strict" for each source file. */,
     "resolveJsonModule": true,
     "strictNullChecks": true,
-    "jsx": "react-jsx",
+    "jsx": "react-jsx"
   },
   "include": ["**/*.ts", "**/*.tsx", "eslint.config.mts"]
 }
