--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "cross-env PORT=8080 turbo run dev",
+    "dev": "dotenv -e .dev.env -e .public.env -e .secret.env -- turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "serve": "turbo run serve",
+    "serve": "dotenv -e .public.env -e .secret.env -- turbo run serve",
     "deploy": "npm run build && npm run serve ",
     "check-types": "turbo run check-types",
     "generate": "tsx scripts/generateProject.ts"
   },
   "devDependencies": {
+    "@dotenv-run/cli": "^1.3.6",
     "@eslint-react/eslint-plugin": "^2.3.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.5",
@@ -35,6 +36,7 @@
   ],
   "dependencies": {
     "dotenv": "^17.2.3",
+    "dotenv-cli": "^11.0.0",
     "eslint-plugin-bsd": "^1.0.0",
     "eslint-plugin-react": "^7.37.5",
     "express": "^5.1.0",
