--- a/apps/template/backend/package.json
+++ b/apps/template/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "template-backend",
   "version": "1.0.0",
   "description": "Backend for the application",
   "main": "index.js",
