--- a/apps/template/frontend/package.json
+++ b/apps/template/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "template-frontend",
   "version": "1.0.0",
   "description": "Frontend for the application",
   "main": "index.js",
