Yoni - changed other scripts to use run turbo

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "full-stack-template",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "dotenv -e .dev.env -e .public.env -e .secret.env -- turbo run dev",
-    "lint": "turbo run lint",
+    "build": "npm run turbo -- build",
+    "dev": "dotenv -e .dev.env -e .public.env -e .secret.env -- npm run turbo -- dev",
+    "lint": "npm run turbo -- lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "serve": "dotenv -e .public.env -e .secret.env -- turbo run serve",
+    "serve": "dotenv -e .public.env -e .secret.env -- npm run turbo -- serve",
     "deploy": "npm run build && npm run serve",
     "check-types": "turbo run check-types",
     "turbo": "tsx scripts/turboRun.ts",
