--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-bsd": "^1.0.0",
     "eslint-plugin-react": "^7.37.5",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "tsx": "^4.20.6"
   }
 }
