--- a/apps/template/docker-compose.yml
+++ b/apps/template/docker-compose.yml
@@ -1,20 +1,12 @@
 services:
-  # frontend:
-  #   build:
-  #     context: ./frontend # Looks for Dockerfile in the ./frontend directory
-  #   ports:
-  #     - "${FRONTEND_PORT}:80" # Maps host:${FRONTEND_PORT} to container:80
-  #   environment:
-  #     # Pass the backend URL to the frontend app (ensure your frontend code reads this env var)
-  #     REACT_APP_BACKEND_URL: http://backend:${BACKEND_PORT}
-  #   depends_on:
-  #     - backend
+  frontend:
+    build:
+      context: ./frontend # Looks for Dockerfile in the ./frontend directory
+    ports:
+      - "${FRONTEND_PORT}:80" # Maps host:${FRONTEND_PORT} to container:80
 
   backend:
     build:
       context: ./backend # Looks for Dockerfile in the ./backend directory
     ports:
       - "${BACKEND_PORT}:4590" # Maps host:${BACKEND_PORT} to container:4590
-    # Add environment variables needed for your backend (e.g., Database URL)
-    # environment:
-    #   DATABASE_URL: your_database_connection_string
