--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "packages/*"
   ],
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "eslint-plugin-bsd": "^1.0.0",
     "eslint-plugin-react": "^7.37.5",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "tailwindcss": "^4.1.17",
     "tsx": "^4.21.0"
   }
 }
