--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,12 +13,12 @@
     {
       "label": "dev",
       "type": "shell",
-      "command": "./node_modules/.bin/dotenv -e .dev.env -e .public.env -e .secret.env -- turbo run dev --filter=${input:project}-frontend --filter=${input:project}-backend"
+      "command": "./node_modules/.bin/dotenv -e .dev.env -e .public.env -e .secret.env -- 'turbo run dev --filter=${input:project}-frontend --filter=${input:project}-backend'"
     },
     {
       "label": "serve",
       "type": "shell",
-      "command": "./node_modules/.bin/dotenv -e .public.env -e .secret.env -- turbo run serve --filter=${input:project}-frontend --filter=${input:project}-backend"
+      "command": "./node_modules/.bin/dotenv -e .public.env -e .secret.env -- 'turbo run serve --filter=${input:project}-frontend --filter=${input:project}-backend'"
     },
     {
       "label": "deploy",
