--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "dotenv -e .public.env -e .secret.env -- turbo run serve",
     "deploy": "npm run build && npm run serve",
     "check-types": "turbo run check-types",
-    "generate": "tsx scripts/generateProject.ts"
+    "generate": "tsx scripts/generateProject.ts",
+    "delete": "tsx scripts/deleteProject.ts"
   },
   "devDependencies": {
     "@dotenv-run/cli": "^1.3.6",
